Correctly center the album cover on small screens.

--- a/src/styles/components/now-playing.scss
+++ b/src/styles/components/now-playing.scss
@@ -44,6 +44,8 @@
   }
 
   &__cover {
+    display: flex;
+    flex-flow: row nowrap;
     max-width: 400px;
   }
 
